edit front url on prod 2

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_URL = https://cinema-app-alpha.vercel.app
+REACT_APP_URL = https://cinema-3y66klcyi-fanilazm.vercel.app
 REACT_APP_SERVER_URL = https://cinema-api-delta.vercel.app
 # REACT_APP_ENV = development
 REACT_APP_ENV = production
