--- a/.env
+++ b/.env
@@ -1,4 +1,8 @@
 REACT_APP_URL = https://cinema-app-bice.vercel.app
 REACT_APP_SERVER_URL = https://cinema-api-fanilazm.vercel.app
+
+# REACT_APP_URL = http://localhost:3000
+# REACT_APP_SERVER_URL = http://localhost:4200
+
 # REACT_APP_ENV = development
 REACT_APP_ENV = production
