update server url

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 REACT_APP_URL = https://cinema-app-bice.vercel.app
-REACT_APP_SERVER_URL = https://cinema-api-fanilazm.vercel.app
+REACT_APP_SERVER_URL = https://cinema-back-fanilazm.vercel.app
 
 # REACT_APP_URL = http://localhost:3000
 # REACT_APP_SERVER_URL = http://localhost:4200
