--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
 REACT_APP_URL = https://cinema-app-bice.vercel.app
-REACT_APP_SERVER_URL = https://cinema-back-fanilazm.vercel.app
+REACT_APP_SERVER_URL = https://cinema-back-production.up.railway.app
+#REACT_APP_SERVER_URL = https://cinema-back-fanilazm.vercel.app
 
-# REACT_APP_URL = http://localhost:3000
-# REACT_APP_SERVER_URL = http://localhost:4200
+#REACT_APP_URL = http://localhost:3000
+#REACT_APP_SERVER_URL = http://localhost:4200
 
-# REACT_APP_ENV = development
+#REACT_APP_ENV = development
 REACT_APP_ENV = production
